fix(YSP-527): fix contrast on single card types
In single card types like reference cards, the hover link and link would
change color, which does not match Storybook, which keeps the text
white, even when visited.  This attempts to get us closer to a
consistent look with Storybook.

--- a/components/02-molecules/cards/reference-card/_yds-reference-card.scss
+++ b/components/02-molecules/cards/reference-card/_yds-reference-card.scss
@@ -42,6 +42,15 @@ $break-single-card-collection-max: tokens.$break-xl - 0.05;
     --color-heading: var(--color-card-single-text);
 
     margin-block-start: var(--size-spacing-11);
+
+    // Overload the color to be the single text color to fix contrast issues.
+    & a.reference-card__heading-link {
+      color: var(--color-card-single-text);
+
+      &:visited {
+        color: var(--color-card-single-text);
+      }
+    }
   }
 
   // Condensed card collection
